masonry_core/src/widgets/tests/snapshots/masonry_core__widgets__tests__lifecycle_basic__impl-2.snap
---
source: masonry_core/src/widget/tests/lifecycle_basic.rs
assertion_line: 49
expression: record_new_child

---
[
    L(
        WidgetAdded,
    ),
    L(
        BuildFocusChain,
    ),
    Layout(
        4.0W×18.0H,
    ),
    L(
        Internal(
            ParentWindowOrigin,
        ),
    ),
]
